# bank-credit-scoring

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
01-credit-scoring-pd/: .dockerignore  .env.example  Makefile  README.md  pyproject.toml
01-credit-scoring-pd/data/: README.md
01-credit-scoring-pd/docs/: calibration.md  data_dictionary.md  deploy.md  drift_report.md  eda.md  explainability.md  fairness.md  feature_schema.json  load_test.md  model_card.md  model_comparison.md  model_selection.md  monitoring.md  prod_lgbm_params.json  scorecard.md  scorecard_points.csv  serving.md
01-credit-scoring-pd/infra/: compose.yaml
01-credit-scoring-pd/infra/docker/: Dockerfile
01-credit-scoring-pd/loadtest/: locustfile.py
01-credit-scoring-pd/notebooks/: 01_eda.ipynb
01-credit-scoring-pd/src/pd_scoring/: __init__.py  config.py  eda.py  logging_config.py  seeds.py
01-credit-scoring-pd/src/pd_scoring/data/: __init__.py  download.py  loaders.py  split.py
01-credit-scoring-pd/src/pd_scoring/features/: __init__.py  aggregations.py  build_mart.py  schema.py  specs.py
01-credit-scoring-pd/src/pd_scoring/models/: __init__.py  calibration.py  dataset.py  evaluate.py  explain.py  fairness.py  gbdt.py  metrics.py  scorecard.py  tracking.py  train.py  tuning.py
01-credit-scoring-pd/src/pd_scoring/monitoring/: __init__.py  drift.py
01-credit-scoring-pd/src/pd_scoring/scoring/: __init__.py
01-credit-scoring-pd/src/pd_scoring/service/: __init__.py  app.py  cli.py  export_model.py  metrics.py  model_loader.py  schemas.py  scoring_service.py
01-credit-scoring-pd/tests/: conftest.py  test_aggregations.py  test_calibration.py  test_config.py  test_cv.py  test_drift.py  test_eda.py  test_explain.py  test_fairness.py  test_gbdt_repro.py  test_mart.py  test_metrics.py  test_model_loader.py  test_scorecard.py  test_scoring.py  test_service.py  test_service_score.py  test_split.py
