[project]
name = "pd-scoring"
version = "1.0.0"
description = "Кредитный скоринг (PD) как production-сервис: WOE-scorecard + GBDT, калибровка, SHAP, fairness, мониторинг дрейфа."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dataeclipse" }]

# Лёгкое ядро - нужно скелету сервиса и конфигу. Ставится `uv sync`.
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.20",
]

# Зависимости разделены на extra (floor-пины на 30.06.2026, новейшие совместимые версии):
#   data - лёгкий слой данных/EDA (Фаза 1): polars/sklearn/pyarrow/kaggle. CI ставит его.
#   ml   - тяжёлые модели/трекинг (Фаза 2+); включает data.
[project.optional-dependencies]
data = [
    # <2.5: numba (через shap, extra explain) пока не поддерживает numpy 2.5 - иначе тянется
    # древний numba 0.53/llvmlite 0.36, не билдящийся на py3.12. 2.4.x устраивает всех.
    "numpy>=2.4,<2.5",
    "pandas>=2.2",
    "polars>=1.0",
    "scipy>=1.14",
    "scikit-learn>=1.8.0",
    "pyarrow>=17.0",
    "kaggle>=1.6",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]
ml = [
    "pd-scoring[data]",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "catboost>=1.2.10",
    "imbalanced-learn>=0.13",
    "optbinning>=0.20",
    "mlflow>=2.18",
    "optuna>=4.0",
]
# Объяснимость / справедливость / дрейф (Фаза 3+). Отдельный extra: shap тянет numba/llvmlite,
# которые пока конфликтуют с numpy 2.x - разрешим в Фазе 3 (cap numpy либо обновлённый numba).
explain = [
    "pd-scoring[ml]",
    "shap>=0.46",
    "fairlearn>=0.12",
    "evidently>=0.5",
]
# Нагрузочный тест /score (Фаза 4). Ставится отдельно: uv sync --extra loadtest.
loadtest = ["locust>=2.0"]
# Минимальный runtime serving (Фаза 5, Docker): без mlflow/shap/numba/catboost - модель грузится
# локально через joblib. uv sync --extra serve.
serve = [
    "numpy>=2.4,<2.5",
    "pandas>=2.2",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
]

[project.scripts]
pd-scoring-serve = "pd_scoring.service.cli:serve"
pd-scoring-ingest = "pd_scoring.data.download:main"
pd-scoring-build-mart = "pd_scoring.features.build_mart:main"
pd-scoring-train = "pd_scoring.models.train:main"
pd-scoring-evaluate = "pd_scoring.models.evaluate:main"
pd-scoring-drift = "pd_scoring.monitoring.drift:main"
pd-scoring-export-model = "pd_scoring.service.export_model:main"

# PEP 735 dev-группа. `uv sync` ставит её по умолчанию.
[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pd_scoring"]

# --- Качество кода ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

# FastAPI Depends/Query/... в дефолтах аргументов - это паттерн фреймворка, не баг (B008).
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src"]

# Библиотеки без type stubs - не ломаем strict-проверку их импортами.
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "kaggle.*",
    "dotenv.*",
    "matplotlib.*",
    "optuna.*",
    "mlflow.*",
    "locust.*",
    "lightgbm.*",
    "xgboost.*",
    "catboost.*",
    "shap.*",
    "optbinning.*",
    "fairlearn.*",
    "evidently.*",
    "imblearn.*",
    "seaborn.*",
]
ignore_missing_imports = true

# pandas/joblib без py.typed-стабов - глушим import-untyped (strict без pandas-stubs шумит).
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "joblib", "joblib.*"]
ignore_missing_imports = true

# tracking.py подклассит mlflow.pyfunc.PythonModel (= Any при ignore_missing_imports). Какой код
# type:ignore нужен - зависит от наличия mlflow (CI data-env vs explain-env) → не флагаем unused.
[[tool.mypy.overrides]]
module = "pd_scoring.models.tracking"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=pd_scoring --cov-report=term-missing"
markers = [
    "ml: тесты, требующие тяжёлого ML-стека (optbinning/lightgbm/catboost/optuna)",
    "explain: тесты, требующие extra explain (shap/fairlearn)",
]

[tool.coverage.run]
source = ["pd_scoring"]
branch = true
