[project]
name = "pd-scoring"
version = "1.0.0"
description = "Credit scoring (PD) as a production service: WOE scorecard + GBDT, calibration, SHAP, fairness, drift monitoring."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dataeclipse" }]

# Lightweight core - needed by the service skeleton and config. Installed by `uv sync`.
dependencies = [
    "pydantic>=2.11",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "SQLAlchemy>=2.0",
    "psycopg[binary]>=3.2",
    "prometheus-client>=0.20",
]

# Dependencies are split into extras (floor pins as of 2026-06-30, latest compatible versions):
#   data - lightweight data/EDA layer (Phase 1): polars/sklearn/pyarrow/kaggle. CI installs it.
#   ml   - heavy models/tracking (Phase 2+); includes data.
[project.optional-dependencies]
data = [
    # <2.5: numba (via shap, extra explain) does not support numpy 2.5 yet - otherwise it pulls
    # ancient numba 0.53/llvmlite 0.36 that does not build on py3.12. 2.4.x suits everyone.
    "numpy>=2.4,<2.5",
    "pandas>=2.2",
    "polars>=1.0",
    "scipy>=1.14",
    "scikit-learn>=1.8.0",
    "pyarrow>=17.0",
    "kaggle>=1.6",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]
ml = [
    "pd-scoring[data]",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
    "catboost>=1.2.10",
    "imbalanced-learn>=0.13",
    "optbinning>=0.20",
    "mlflow>=2.18",
    "optuna>=4.0",
]
# Explainability / fairness / drift (Phase 3+). Separate extra: shap pulls numba/llvmlite,
# which currently conflict with numpy 2.x - resolved in Phase 3 (cap numpy or updated numba).
explain = [
    "pd-scoring[ml]",
    "shap>=0.46",
    "fairlearn>=0.12",
    "evidently>=0.5",
]
# Load test for /score (Phase 4). Installed separately: uv sync --extra loadtest.
loadtest = ["locust>=2.0"]
# Minimal runtime serving (Phase 5, Docker): without mlflow/shap/numba/catboost - the model loads
# locally via joblib. uv sync --extra serve.
serve = [
    "numpy>=2.4,<2.5",
    "pandas>=2.2",
    "scikit-learn>=1.8.0",
    "lightgbm>=4.6.0",
]

[project.scripts]
pd-scoring-serve = "pd_scoring.service.cli:serve"
pd-scoring-ingest = "pd_scoring.data.download:main"
pd-scoring-build-mart = "pd_scoring.features.build_mart:main"
pd-scoring-train = "pd_scoring.models.train:main"
pd-scoring-evaluate = "pd_scoring.models.evaluate:main"
pd-scoring-drift = "pd_scoring.monitoring.drift:main"
pd-scoring-export-model = "pd_scoring.service.export_model:main"

# PEP 735 dev group. `uv sync` installs it by default.
[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pd_scoring"]

# --- Code quality ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**" = ["E501"]

# FastAPI Depends/Query/... in argument defaults is a framework pattern, not a bug (B008).
[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src"]

# Libraries without type stubs - do not break the strict check with their imports.
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "kaggle.*",
    "dotenv.*",
    "matplotlib.*",
    "optuna.*",
    "mlflow.*",
    "locust.*",
    "lightgbm.*",
    "xgboost.*",
    "catboost.*",
    "shap.*",
    "optbinning.*",
    "fairlearn.*",
    "evidently.*",
    "imblearn.*",
    "seaborn.*",
]
ignore_missing_imports = true

# pandas/joblib without py.typed stubs - silence import-untyped (strict without pandas-stubs is noisy).
[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "joblib", "joblib.*"]
ignore_missing_imports = true

# tracking.py subclasses mlflow.pyfunc.PythonModel (= Any under ignore_missing_imports). Which
# type:ignore is needed depends on whether mlflow is present (CI data-env vs explain-env) -> do not flag unused.
[[tool.mypy.overrides]]
module = "pd_scoring.models.tracking"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=pd_scoring --cov-report=term-missing"
markers = [
    "ml: tests requiring the heavy ML stack (optbinning/lightgbm/catboost/optuna)",
    "explain: tests requiring the explain extra (shap/fairlearn)",
]

[tool.coverage.run]
source = ["pd_scoring"]
branch = true
